Correct wording. Fix style on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -576,8 +576,8 @@ body {
   .project-text {
     transform: translateY(-3.2rem);
   }
-  .project-img:nth-child(2) {
-    grid-row: 1;
+  .project-img:nth-child(4) {
+    grid-row: 3;
   }
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
