--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -68,8 +68,8 @@
     transform: translateY(-3.2rem);
   }
 
-  .project-img:nth-child(2) {
-    grid-row: 1;
+  .project-img:nth-child(4) {
+    grid-row: 3;
   }
 
   /* MOBILE NAVIGATION */
